environment_setup/modules/jenkins/jenkins_setup.tf
resource "tls_private_key" "sskeygen_execution" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "aws_key_pair" "jenkins_key_pair" {
  depends_on = ["tls_private_key.sskeygen_execution"]
  key_name   = "jenkins_public"
  public_key = tls_private_key.sskeygen_execution.public_key_openssh
}

resource "aws_subnet" "private_subnet_jenkins" {
  vpc_id            = var.vpc_id
  cidr_block        = var.private_subnets_for_jenkins
  availability_zone = var.availability_zone
  tags = merge(var.common_tags, {
    Name = "private_${var.availability_zone}_jenkins"
  })
}

resource "aws_iam_role" "jenkins_role" {
  name = "jenkins_role_${var.env}"

  assume_role_policy = jsonencode({
    Version = "2012-10-17",
    Statement = [{
      Effect = "Allow",
      Principal = {
        Service = "ec2.amazonaws.com"
      },
      Action = "sts:AssumeRole"
    }]
  })
}

resource "aws_iam_role_policy_attachment" "jenkins_ssm" {
  role       = aws_iam_role.jenkins_role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonSSMFullAccess"
}

resource "aws_iam_instance_profile" "jenkins_profile" {
  name = "jenkins_profile"
  role = aws_iam_role.jenkins_role.name
}

resource "aws_security_group" "jenkins_security_group" {
  name = "allow_all"

  vpc_id = var.vpc_id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

}

resource "aws_instance" "jenkins_instance" {
  ami                    = var.ami
  instance_type          = "c7i-flex.large"
  subnet_id              = aws_subnet.private_subnet_jenkins.id
  vpc_security_group_ids = [aws_security_group.jenkins_security_group.id]
  iam_instance_profile   = aws_iam_instance_profile.jenkins_profile.name

  key_name = aws_key_pair.jenkins_key_pair.key_name

  tags = merge(var.common_tags, {
    Name = "jenkins_instance"
  })

}
